tests/regression/errors/basic/import_error_16.csd
// Import error test 16
yeet "nonexistent_module_16"
sus result drip = some_function(16)
